--- a/src/assets/css/utilities.css
+++ b/src/assets/css/utilities.css
@@ -1,6 +1,59 @@
 .container
 {
-    width:1200px;
-    width:90%;
+    width:1150px;
+    width:80%;
     margin:0 auto;
+}
+.grid{
+    display: grid;
+}
+.grid-gap-1{
+    column-gap: 1rem;
+}
+.grid-row-gap-1
+{
+    row-gap: 1.1rem;
+}
+.grid-col-1
+{
+    grid-template-columns: 1fr;
+}
+.grid-gap-2{
+    column-gap:1.1rem;
+}
+.grid-row-gap-2
+{
+    row-gap: 2.2rem;
+}
+.grid-col-2
+{
+    grid-template-columns: repeat(2,1fr);
+}
+.grid-col-3
+{
+    grid-template-columns: repeat(3,1fr);
+}
+.grid-row-3
+{
+    grid-template-rows: 50px auto 50px;
+}
+
+.grid-col-4
+{
+    grid-template-columns: repeat(4,1fr);
+}
+
+.col-25
+{
+    grid-column-start: 1/span 1;
+}
+
+.col-50
+{
+    grid-column-start: 1/span 2;
+}
+
+.col-75
+{
+    grid-column-start: 1/span 3;
 }
